deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary-app
      version: v1
  template:
    metadata:
      labels:
        app: canary-app
        version: v1
    spec:
      containers:
      - name: app
        image: username/canary-app:v1
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-app
      version: v2
  template:
    metadata:
      labels:
        app: canary-app
        version: v2
    spec:
      containers:
      - name: app
        image: username/canary-app:v2
        ports:
        - containerPort: 3000
