service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: canary-app
  ports:
  - port: 80
    targetPort: 3000
    name: http
